--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
-    "@types/react": "^18.2.42",
+    "@types/react": "18.2.42",
     "@types/react-dom": "^18.3.0",
     "@types/react-scroll": "^1.8.10",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
