--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "framer-motion": "^11.11.11",
     "next": "^15.0.1",
     "nxtblog-ai": "^1.1.6",
+    "posthog-js": "^1.232.7",
+    "posthog-node": "^4.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
