--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "framer-motion": "^11.11.11",
     "next": "^15.2.6",
     "nxtblog-ai": "^1.1.6",
+    "openai": "^6.10.0",
     "posthog-js": "^1.232.7",
     "posthog-node": "^4.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
